--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,6 +41,10 @@ jobs:
         with:
           dotnet-version: '10.0.x'
 
+      - name: Install Access Database Engine (ACE) x64
+        if: runner.os == 'Windows'
+        run: choco install accessdatabaseengine -y
+
       - name: Restore
         run: dotnet restore Kursplan/Kursplan.csproj
 
