Add step in release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,8 +42,12 @@ jobs:
           dotnet-version: '10.0.x'
 
       - name: Install Access Database Engine (ACE) x64
-        if: runner.os == 'Windows'
-        run: choco install accessdatabaseengine -y
+        shell: powershell
+        run: |
+          $url = "https://download.microsoft.com/download/3/5/c/35c84c36-661a-44e6-9324-8786b8dbe231/accessdatabaseengine_X64.exe"
+          $installer = "$env:TEMP\AccessDatabaseEngine.exe"
+          Invoke-WebRequest $url -OutFile $installer
+          Start-Process $installer -ArgumentList "/quiet /norestart" -Wait
 
       - name: Restore
         run: dotnet restore Kursplan/Kursplan.csproj
