--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,9 @@ on:
     types: [published]
   workflow_dispatch:
 
+permissions:
+  contents: read
+
 jobs:
   create-release:
     runs-on: ubuntu-latest
@@ -29,6 +32,8 @@ jobs:
   build-and-upload:
     needs: create-release
     runs-on: windows-latest
+    permissions:
+      contents: write
     strategy:
       matrix:
         rid: [win-x64, win-x86]
