--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,6 +34,8 @@ jobs:
   build-and-upload:
     needs: create-release
     runs-on: windows-latest
+    env:
+      ACE_INSTALLER_PATH: ${{ runner.temp }}\AccessDatabaseEngine.exe
     permissions:
       contents: write
     strategy:
@@ -48,13 +50,25 @@ jobs:
         with:
           global-json-file: global.json
 
+      - name: Cache Access Database Engine installer
+        uses: actions/cache@v4
+        id: cache-ace-installer
+        with:
+          path: ${{ env.ACE_INSTALLER_PATH }}
+          key: ${{ runner.os }}-ace-installer-x64
+
       - name: Install Access Database Engine (ACE) x64
         shell: powershell
         run: |
-          $url = "https://download.microsoft.com/download/3/5/c/35c84c36-661a-44e6-9324-8786b8dbe231/accessdatabaseengine_X64.exe"
-          $installer = "$env:TEMP\AccessDatabaseEngine.exe"
-          Invoke-WebRequest $url -OutFile $installer
-          Start-Process $installer -ArgumentList "/quiet /norestart" -Wait
+          if ('${{ steps.cache-ace-installer.outputs.cache-hit }}' -ne 'true') {
+            $url = "https://download.microsoft.com/download/3/5/c/35c84c36-661a-44e6-9324-8786b8dbe231/accessdatabaseengine_X64.exe"
+            Write-Host "Downloading ACE installer..."
+            Invoke-WebRequest $url -OutFile "${{ env.ACE_INSTALLER_PATH }}"
+          } else {
+            Write-Host "ACE installer restored from cache."
+          }
+          Write-Host "Installing ACE..."
+          Start-Process -FilePath "${{ env.ACE_INSTALLER_PATH }}" -ArgumentList "/quiet /norestart" -Wait
 
       - name: Restore
         run: dotnet restore Kursplan/Kursplan.csproj
