--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -15,8 +15,6 @@ jobs:
   analyze:
     name: Analyze
     runs-on: windows-latest
-    env:
-      ACE_INSTALLER_PATH: ${{ runner.temp }}\AccessDatabaseEngine.exe
     permissions:
       actions: read
       contents: read
@@ -43,6 +41,10 @@ jobs:
       uses: actions/setup-dotnet@v5
       with:
         global-json-file: global.json
+
+    - name: Set ACE installer path
+      shell: powershell
+      run: echo "ACE_INSTALLER_PATH=$(${{ runner.temp }})\AccessDatabaseEngine.exe" >> $GITHUB_ENV
 
     - name: Cache Access Database Engine installer
       uses: actions/cache@v4
