--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,8 +34,6 @@ jobs:
   build-and-upload:
     needs: create-release
     runs-on: windows-latest
-    env:
-      ACE_INSTALLER_PATH: ${{ runner.temp }}\AccessDatabaseEngine.exe
     permissions:
       contents: write
     strategy:
@@ -49,6 +47,10 @@ jobs:
         uses: actions/setup-dotnet@v5
         with:
           global-json-file: global.json
+
+      - name: Set ACE installer path
+        shell: powershell
+        run: echo "ACE_INSTALLER_PATH=$(${{ runner.temp }})\AccessDatabaseEngine.exe" >> $GITHUB_ENV
 
       - name: Cache Access Database Engine installer
         uses: actions/cache@v4
