--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,9 +48,20 @@ jobs:
         with:
           global-json-file: global.json
 
-      - name: Set ACE installer path
+      - name: Set Paths
+        id: set_paths
         shell: powershell
-        run: echo "ACE_INSTALLER_PATH=$(${{ runner.temp }})\AccessDatabaseEngine.exe" >> $GITHUB_ENV
+        run: |
+          $ace_path = Join-Path "${{ runner.temp }}" "AccessDatabaseEngine.exe"
+          echo "ace_path=$ace_path" >> $env:GITHUB_OUTPUT
+          echo "ACE_INSTALLER_PATH=$ace_path" >> $env:GITHUB_ENV
+
+      - name: Cache Access Database Engine installer
+        uses: actions/cache@v4
+        id: cache-ace-installer
+        with:
+          path: ${{ steps.set_paths.outputs.ace_path }}
+          key: ${{ runner.os }}-ace-installer-x64
 
       - name: Install Access Database Engine (ACE) x64
         shell: powershell
